--- a/tools/json/config.software.json
+++ b/tools/json/config.software.json
@@ -830,7 +830,7 @@
                             "description": "Remove Docker",
                             "about": "This operation will purge Docker.",
                             "command": [
-                                "apt_install_wrapper apt -y purge docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin docker-ce-rootless-extras"
+                                "pkg_remove docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin docker-ce-rootless-extras"
                             ],
                             "status": "Stable",
                             "author": "@schwar3kat",
@@ -935,7 +935,7 @@
                             "description": "Remove Emby server",
                             "about": "This operation will purge Emby server.",
                             "command": [
-                                "apt_install_wrapper apt -y purge emby-server"
+                                "pkg_remove emby-server"
                             ],
                             "status": "Stable",
                             "author": "@schwar3kat",
@@ -1140,7 +1140,7 @@
                             "about": "This operation will install Cockpit.\ncockpit cockpit-ws cockpit-system cockpit-storaged",
                             "command": [
                                 "see_current_apt update",
-                                "apt_install_wrapper apt -y install cockpit cockpit-ws cockpit-system cockpit-storaged "
+                                "pkg_install cockpit cockpit-ws cockpit-system cockpit-storaged "
                             ],
                             "status": "Stable",
                             "author": "@schwar3kat",
@@ -1151,7 +1151,7 @@
                             "description": "Purge Cockpit web-based management tool",
                             "about": "This operation will purge Cockpit.",
                             "command": [
-                                "apt_install_wrapper apt -y purge cockpit"
+                                "pkg_remove cockpit"
                             ],
                             "status": "Stable",
                             "author": "@schwar3kat",
